# wildcat

./: ARCHITECTURE.md  CLAUDE.md  Containerfile  DESIGN.md  README.md  build.sh  clean.sh  config.toml  entrypoint.sh  fetch-model.sh  pixi.toml  pyproject.toml  run.sh  supervisord.conf
src/wildcat/: __init__.py  config.py  llm.py  main.py  orchestrator.py  runner.py  skills.py  state.py  tools.py
src/wildcat/ui/: app.py
src/wildcat/ui/templates/: checkpoint.html  checkpoint_panel.html  logs.html  pipeline.html  pipeline_fragment.html  start.html
tests/: test_tools.py
