[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wildcat"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "openai>=1.30",
    "mcp>=1.0",
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "watchdog>=4.0",
    "jinja2>=3.1",
]

[project.scripts]
wildcat = "wildcat.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/wildcat"]
